--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow.compat.v1 as tf\n",
     "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
     "from lucid_kietzmannlab.utils import interactive_visualization, batch_visualization, plot_images\n",
     "from ipywidgets import interact, Dropdown, IntSlider\n",
     "\n",
-    "\n"
+    "tf.compat.v1.disable_eager_execution()\n"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,6 @@
     "    interactive_visualization(model,layer_name, channel, layer_shape_dict, scope = 'import')   \n",
     "\n",
     "def visualize_all():\n",
-    "    # Check if the layer exists in the shape dictionary\n",
     "    layer_name = current_dropdown_value({'new': layer_dropdown.value})\n",
     "    image_channel = batch_visualization(model, layer_name, layer_shape_dict, channel_slider, scope = 'import')\n",
     "    return image_channel            \n",
@@ -94,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "327d6589384444628b609d9f4165e9db",
+       "model_id": "1aaa657bed3a49c38334179d727122d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
        "<function __main__.visualize(layer_name, channel)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
