get the gradients

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1aaa657bed3a49c38334179d727122d4",
+       "model_id": "249c64ed081745d7a59a7c830460d7e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
        "<function __main__.visualize(layer_name, channel)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,6 +171,18 @@
    "outputs": [],
    "source": [
     "layer_shape_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Graph().as_default() as graph:\n",
+    "    tf.import_graph_def(model.graph_def, name=\"\")\n",
+    "    writer = tf.summary.FileWriter('AlexNet', graph)\n",
+    "    writer.close()"
    ]
   },
   {
