tensorflows with seeded model

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -22,13 +22,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Choose the alexnet model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -51,7 +44,7 @@
     "\n",
     "def visualize_all():\n",
     "    layer_name = current_dropdown_value({'new': layer_dropdown.value})\n",
-    "    image_channel = batch_visualization(model, layer_name, channel_slider, scope = 'import')\n",
+    "    image_channel = batch_visualization(model, graph, layer_name, scope = 'import')\n",
     "    return image_channel            \n",
     "                              \n",
     "\n",
@@ -100,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2f64bcfc30046ee931ab76cd67932b9",
+       "model_id": "59cd14c0d6ae41f69e4517608b338f40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,13 +156,6 @@
     "if image_channel:\n",
     "    plot_images(image_channel)   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
