add start and end channel viw

--- a/examples/interaction_ecoset_alex_v2.ipynb
+++ b/examples/interaction_ecoset_alex_v2.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
     "    model.vis_layer = layer_name\n",
     "    model.channel = channel\n",
     "    image_channel = model.lucid_visualize_layer()\n",
-    "    return image_channel\n",
     "    \n",
-    "def visualize_all():\n",
+    "    \n",
+    "def visualize_all(channel_start = 0, channel_end = 10):\n",
     "    layer_name = current_dropdown_value({'new': layer_dropdown.value})\n",
     "    model.vis_layer = layer_name\n",
-    "    image_channel = model.lucid_visualize_layer(batch = True)\n",
+    "    image_channel = model.lucid_visualize_layer(batch = True, channel_start = channel_start, channel_end = channel_end)\n",
     "    return image_channel              \n",
     "                              \n",
     "\n",
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df78db97d69e4bbc8ce34f51d8a3592a",
+       "model_id": "5dd53e178671407cbb535351e53fdbc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
        "<function __main__.visualize(layer_name, channel)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,24 +145,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4095 [00:00<?, ?it/s]2024-06-14 17:48:35.544157: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 1/4095 [00:30<34:22:11, 30.22s/it]2024-06-14 17:49:05.859366: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 2/4095 [01:00<34:39:25, 30.48s/it]2024-06-14 17:49:36.451181: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 3/4095 [01:30<34:08:52, 30.04s/it]2024-06-14 17:50:05.943440: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 4/4095 [02:00<34:06:08, 30.01s/it]2024-06-14 17:50:35.923927: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 5/4095 [02:30<34:18:34, 30.20s/it]2024-06-14 17:51:06.458457: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 6/4095 [03:03<35:10:11, 30.96s/it]2024-06-14 17:51:38.947396: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 7/4095 [03:37<36:19:18, 31.99s/it]2024-06-14 17:52:13.013526: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 8/4095 [04:12<37:15:18, 32.82s/it]2024-06-14 17:52:47.752821: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 9/4095 [04:48<38:26:07, 33.86s/it]2024-06-14 17:53:23.836106: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 10/4095 [05:23<38:59:17, 34.36s/it]2024-06-14 17:53:59.264499: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 11/4095 [05:57<38:43:45, 34.14s/it]2024-06-14 17:54:32.879318: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "  0%|          | 12/4095 [06:33<39:26:01, 34.77s/it]2024-06-14 17:55:09.125535: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
+      "  0%|          | 0/10 [00:00<?, ?it/s]2024-06-14 18:06:46.916316: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      " 10%|█         | 1/10 [00:39<05:55, 39.45s/it]2024-06-14 18:07:26.561493: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      " 20%|██        | 2/10 [01:24<05:42, 42.82s/it]2024-06-14 18:08:11.604536: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      " 30%|███       | 3/10 [02:00<04:37, 39.57s/it]2024-06-14 18:08:47.288427: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      " 40%|████      | 4/10 [02:36<03:50, 38.40s/it]2024-06-14 18:09:23.925262: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      " 50%|█████     | 5/10 [03:13<03:07, 37.58s/it]2024-06-14 18:10:00.010344: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      " 60%|██████    | 6/10 [03:48<02:27, 36.92s/it]2024-06-14 18:10:35.647821: W tensorflow/c/c_api.cc:305] Operation '{name:'alexnet_v2/fc8/biases/Assign' id:198 op device:{requested: '/device:CPU:0', assigned: ''} def:{{{node alexnet_v2/fc8/biases/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false, _device=\"/device:CPU:0\"](alexnet_v2/fc8/biases, alexnet_v2/fc8/biases/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
      ]
     }
    ],
    "source": [
-    "image_channel = visualize_all()"
+    "image_channel = visualize_all(channel_start = 0, channel_end = 10)"
    ]
   },
   {
