--- a/examples/interactive_layer_visualization.ipynb
+++ b/examples/interactive_layer_visualization.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import numpy as np\n",
+    "import random\n",
     "import tensorflow as tf\n",
     "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
     "from ipywidgets import interact, Dropdown, IntSlider\n",
@@ -31,6 +33,18 @@
     "model_dir=\"/Users/vkapoor/Downloads/models/AlexNet/training_seed_01\"\n",
     "random_seed = 1\n",
     "model = models.AlexNetCodeOcean(model_dir=model_dir, random_seed = random_seed)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"PYTHONHASHSEED\"] = str(random_seed)\n",
+    "tf.random.set_seed(random_seed)\n",
+    "np.random.seed(random_seed)\n",
+    "random.seed(random_seed)"
    ]
   },
   {
